# x402-stellar-channels

./: .env.testnet.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
contract/: Cargo.toml
contract/src/: channel.rs  dispute.rs  lib.rs  types.rs
contract/tests/: channel_lifecycle.rs  dispute_flow.rs
demo/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
demo/scripts/: deploy-contract.ts  setup-testnet.ts
demo/src/: crypto.ts  types.ts
demo/src/benchmark/: channel.ts  run.ts  timer.ts  vanilla.ts
demo/src/client/: channel-client.ts  vanilla-client.ts
demo/src/facilitator/: server.ts  stellar.ts
demo/src/server/: index.ts  middleware.ts
demo/test/: channel-flow.spec.ts  crypto.spec.ts  middleware.spec.ts  vanilla-flow.spec.ts
docs/superpowers/plans/: 2026-03-17-x402-stellar-channels.md
docs/superpowers/specs/: 2026-03-17-x402-stellar-channels-design.md
