[package]
name = "x402-channel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[[test]]
name = "channel_lifecycle"
required-features = ["testutils"]

[[test]]
name = "dispute_flow"
required-features = ["testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
